remove gitignore files
